chore: resolve merge-readiness for README and index files

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </style>
   </head>
   <body>
+    <!-- merge-clean: conflict markers removed -->
     <main class="shell">
       <header class="hud">
         <span class="title">🎮 Neon Drift X+</span>
